--- a/import.css
+++ b/import.css
@@ -34,7 +34,7 @@ li {
 
 .title{
     color: #fddb76;
-    font-size: 26px;
+    font-size: 20px;
     margin: 0 auto;
     position: relative;
     text-align: center;
@@ -58,12 +58,12 @@ a:link, a:visited, a:hover, a:active {
 }
 
 h2{
-    font-size:26px;
+    font-size:20px;
     margin: 15px 0px;
 }
 
 h3{
-    font-size:20px;
+    font-size:18px;
     margin: 15px 0px;
 }
 
@@ -73,7 +73,7 @@ p{
 }
 
 a{
-    font-size:16x;
+    font-size:16px;
 
 }
 
@@ -126,7 +126,7 @@ header li{
 
 .c-txt a{
     color: #fff;
-    font-size: 20px;
+    font-size: 18px;
     padding: 15px;
     font-weight: 100;
 }
@@ -564,7 +564,7 @@ footer p{
 
 .profile-text h3{
     color: #62939b;
-    font-size: 20px;
+    font-size: 18px;
     margin-bottom: 10px;
 }
 
@@ -593,6 +593,12 @@ footer p{
 #content-contact{
     padding-top: 30px;
     text-align: center;
+}
+
+.contact{
+    width: 75%;
+    max-width: 1000px;
+    margin: 0 auto;
 }
 
 .contast-text{
@@ -663,7 +669,7 @@ footer p{
 
 .gallery-title{
     color: #ecca63;
-    font-size: 24px;
+    font-size: 20px;
     margin: 0 auto;
     position: relative;
     text-align: center;
@@ -786,8 +792,8 @@ footer p{
 }
   
 .popup_box{	
-    width: 50vw;
-    max-width: 75vw;
+    width: 50%;
+    max-width: 75%;
     display: none;	
     position: fixed;
     top:50%;
@@ -907,11 +913,15 @@ footer p{
 
 /* ▲ galleryページ ▲ */
 
-@media only screen and (max-width: 1024px) {
+@media only screen and (max-width: 768px) {
 
     body{
         max-width: 100%;
         margin: 0 auto;
+    }
+
+    header{
+        height: 80px;
     }
 
     header h1 a img{
@@ -919,14 +929,36 @@ footer p{
     }    
 
     header .inner{
-        width: 60%;
-        max-width: 80%;
+        display: block;
+        position: static;
+        padding: 0;
+        line-height: 80px;
+        height: 80px;
+        text-align: center;
     }
-    
-    
-    header nav{
-        margin: 0 auto;
-        padding-right: 0;
+
+    header nav {
+        margin: 0;
+        display: inline-block;
+    }
+
+    header li{
+        margin: 0px 15px;
+    }
+
+    .c-txt.line {
+        padding-bottom: 2px;
+    }
+
+    .c-txt.line::before{
+        bottom: 25px;
+    }
+
+    .c-txt a {
+        color: #fff;
+        font-size: 16px;
+        padding: 0px 7px;
+        font-weight: 100;
     }
     
     .main-visual img{
@@ -958,7 +990,7 @@ footer p{
 
     .popup_box{	
         max-height: 85vh;
-        max-width: 85vw;
+        max-width: 85%;
         display: none;	
         position: fixed;
         top:50%;
@@ -975,7 +1007,7 @@ footer p{
 
     
     .bottom{
-        width: 30%;
+        width: 75%;
         position: relative;
         margin: 0 auto;
         display: block;
@@ -992,16 +1024,25 @@ footer p{
         height: 20px;
         margin: 10px;
     }
-    
-    .profile{
+
+    #content-profile{
+        margin-bottom: 0;
+        padding-bottom: 30px;
+    }
+
+    .contast-text{
+    line-height: 200%;
+    margin-top: 20px;
+}
+
+    .profile {
         display: block;
-        width: 75%;
         margin: 0 auto;
         padding: 0px;
     }
 
     .profile-img {
-        max-width: 45vw;
+        max-width: 80%;
         margin: 0 auto;
         height: auto;
         display: block;
@@ -1011,32 +1052,32 @@ footer p{
         max-width: 100%;
     }
 
-
-    .profile-text{
+    .profile-text {
         display: block;
         margin: 0 auto;
+        padding: 0px 0px 20px 0px;
+    }
+
+    .profile-text h3{
+        margin: 0;
     }
 
     .gallery-nav {
-        width: 20%;
+        width: 50%;
         height: 70px;
         position: relative;
         padding-top: 30px;
         margin: 0 auto;
         right: 0;
         left: 0;
-
     }
 
-
     .gallery-nav ul {
-        display: grid;
-        grid-template-columns: 1fr 1fr;
-        column-gap: 5px;
+        display: flex;
     }
 
     .gallery-nav ul li {
-        width: 100%;
+        width: 50%;
         margin: 0px;    
         opacity: 0.5;
         transition: .5s;
@@ -1059,8 +1100,8 @@ footer p{
 
     .top ul{
         display: grid;
-        grid-template-columns: 1fr 1fr 1fr;
-        gap: 20px;
+        grid-template-columns: 1fr 1fr;
+        gap: 10px;
     }
     
     .top li{
