--- a/import.css
+++ b/import.css
@@ -1114,7 +1114,7 @@ footer p{
     
     .popup_box{	
         max-height: 85%;
-        width: 75%;
+        width: 70%;
         display: none;	
         position: fixed;
         top:50%;
@@ -1122,7 +1122,12 @@ footer p{
         transform: translateX(-50%) translateY(-50%);
         z-index: 110;
         background: #efead5;				
-        padding: 30px;	
+        padding: 20px;	
+    }
+
+    .popup_close{
+        width: 0px; 
+        height: 0px;
     }
 
     .popup_box img{	
@@ -1130,11 +1135,11 @@ footer p{
     }
 
     .popup_nav .next {
-        right: -33px;
+        right: -11%;
     }
 
     .popup_nav .prev{
-        left: -33px;
+        left: -11%;
     }
 
     .popup_box p{
