--- a/import.css
+++ b/import.css
@@ -418,18 +418,18 @@ footer p{
 
 }
 
-.loop-wrap:hover .loop-list {
+.loop-list li img {
+    margin-right: 10px;
+    transition: transform 0.3s ease-in-out;
+}
+
+.loop-list:hover{
     animation-play-state: paused;
 }
 
-.loop-list li img {
-    margin-right: 10px;
-    transition: transform 0.4s ease-in-out;
-}
-
 .loop-list li img:hover {
-    transform: rotate(3deg) scale(1.01);
-    opacity: 0.8;
+    transform: rotate(2deg) scale(1.01);
+    opacity: 0.9;
     cursor: pointer;
 }
 
@@ -488,7 +488,7 @@ footer p{
     text-align: center;
     width: 100%;
     position: absolute;
-    margin-bottom:40px;
+    margin-bottom:20px;
     bottom: 0;
 }
 
