--- a/import.css
+++ b/import.css
@@ -12,7 +12,7 @@ html, body, div, span, iframe, h1, h2, h3, p, pre, img, dl, dt, dd, ol, ul, li, 
 html body{
     position: relative;
     color: #efead5;
-    background-color: #7aa8af;
+    background-color: #86bac2;
     font-family: 'Noto Serif JP', sans-serif;
     letter-spacing: 0.06em;
 }
@@ -83,7 +83,7 @@ header {
     top: 0;
     z-index: 99;
     position: fixed;
-    background-color: rgba(122,168,175);
+    background-color: #86bac2;
 }
 
 header .inner{
@@ -281,7 +281,7 @@ footer p{
     width: 100%;
     height: 100vh;
     transition:all 2s 0s ease;
-    background-color: #7aa8af;
+    background-color: #86bac2;
     z-index: 9999;
     display: flex;
     align-items: center;
@@ -535,11 +535,11 @@ footer p{
 }
 
 #content-profile .title{
-    color: #62939b;
+    color: #6dafb9;
 }
 
 .profile-text h3{
-    color: #62939b;
+    color: #6dafb9;
     font-size: 18px;
     margin-bottom: 10px;
 }
@@ -550,7 +550,7 @@ footer p{
 }
 
 .profile-text p{
-    color: #62939b;
+    color: #6dafb9;
     letter-spacing: 0.06em;
     line-height: 1.5em
 }
@@ -592,7 +592,7 @@ footer p{
     /* border-radius: 9999px; */
     box-shadow: 5px 7px #588991;
     cursor: pointer;
-    color: #7aa8af;
+    color: #86bac2;
     letter-spacing:.1em;
 }
 
@@ -605,7 +605,7 @@ footer p{
     left: 5px;
     z-index: 2;
     display: block;
-    border:dotted 2px #7aa8af;
+    border:dotted 2px #86bac2;
     /* border-radius: 9999px; */
 }
 
@@ -617,14 +617,14 @@ footer p{
     display: block;
     width: 11px;
     height: 9px;
-    background-color: #7aa8af;
+    background-color: #86bac2;
     clip-path: polygon(0 0, 0 100%, 100% 50%);
     transition: all 0.3s ease;
 }
 
 .contact-button a{
     position: relative;
-    color: #7aa8af;
+    color: #86bac2;
     letter-spacing:.1em;
     z-index: 3;
 }
@@ -791,7 +791,7 @@ footer p{
     height: 30px;
     font-size: 16px;
     line-height: 30px;
-    background: #62939b;
+    background: #6dafb9;
     border-radius: 3px;
     padding: 0 10px;
 }
@@ -809,7 +809,7 @@ footer p{
 .popup_box p{
     font-size: 16px;
     line-height: 1.8;
-    color: #62939b;
+    color: #6dafb9;
     text-align: center;
 }
 
@@ -981,7 +981,7 @@ footer p{
 
     .loop-inner {
         height: 70vh;
-        animation: loop-slide 40s linear infinite;
+        animation: loop-slide 90s linear infinite;
     }
 
     .loop-list {
@@ -990,38 +990,38 @@ footer p{
 
     .item1 img {
     height: 40vh;
-    margin-top: 10vh;
+    margin-top:10vh;
     margin-left: 30px;
     }
 
     .item2 img {
-        height: 30vh;
-        margin-top: 5vh;
+        height: 35vh;
+        margin-top: 0;
     }
 
     .item3 img{
         height: 20vh;
-        margin-top: 20vh;
+        margin-top: 22vh;
     }
 
     .item4 img {
-        height: 50vh;
-        margin-top: 10vh;
+        height: 45vh;
+        margin-top: 2vh;
     }
 
     .item5 img {
-        height: 45vh;
-        margin-top: 0;
+        height: 32vh;
+        margin-top: 10vh;
     }
 
     .item6 img {
         height: 20vh;
-        margin-top: 40vh;
+        margin-top: 22vh;
     }
 
     .item7 img {
-        height: 15vh;
-        margin-top: 20vh;
+        height: 17vh;
+        margin-top: 17vh;
     }
 
 
